render each line at a time